--- a/C971/EditAssessmentPage.xaml
+++ b/C971/EditAssessmentPage.xaml
@@ -5,7 +5,7 @@
              Title="Edit Assessment">
     <ScrollView>
         <Grid Padding="20"
-              RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto"
+              RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto"
               ColumnDefinitions="Auto,*,Auto"
               RowSpacing="20"
               ColumnSpacing="10">
@@ -77,24 +77,28 @@
                    HeightRequest="20"
                    WidthRequest="20"
                    VerticalOptions="Center" />
-            <Button Grid.Row="7"
-                    Grid.Column="0"
-                    Grid.ColumnSpan="3"
-                    Text="Delete Course"
-                    BackgroundColor="Red"
-                    TextColor="White"
-                    Clicked="OnDeleteButtonClicked"
-                    Margin="0,10,0,0" />
-            <Button Grid.Row="6"
-                    Grid.Column="0"
-                    Grid.ColumnSpan="3"
-                    Text="Save Changes"
-                    BackgroundColor="#007AFF"
-                    TextColor="White"
-                    CornerRadius="5"
-                    Clicked="OnSaveButtonClicked"
-                    HeightRequest="50" />
+            <Grid Grid.Row="5"
+                  Grid.Column="0"
+                  Grid.ColumnSpan="3"
+                  ColumnDefinitions="*,*"
+                  ColumnSpacing="10"
+                  Margin="0,20,0,0">
+                <Button Grid.Column="0"
+                        Text="Save Changes"
+                        BackgroundColor="#007AFF"
+                        TextColor="White"
+                        CornerRadius="5"
+                        Clicked="OnSaveButtonClicked"
+                        HeightRequest="50" />
 
+                <Button Grid.Column="1"
+                        Text="Delete Assessment"
+                        BackgroundColor="Red"
+                        TextColor="White"
+                        CornerRadius="5"
+                        Clicked="OnDeleteButtonClicked"
+                        HeightRequest="50" />
+            </Grid>
         </Grid>
     </ScrollView>
 </ContentPage>
